--- a/recette_gateau_chocolat.html
+++ b/recette_gateau_chocolat.html
@@ -2,7 +2,8 @@
 <html lang="fr">
     <head>
         <title>Recette du gateau au chocolat</title>
-        <meta charset="utf-8">        
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">        
         <link rel="stylesheet" href="recette.css">
     </head>
     <body>         
@@ -10,7 +11,7 @@
             <div class="centre categorie">
                 <p class="categorie">Recette</p> 
             </div>   
-            <h1>Le gateau au chocolat</h1>
+            <h1>Gateau au chocolat</h1>
             <div class="separateur"></div>
             <div class="centre">
                 <p class="description"> "Cette recette du gateau au chocolat est un grand classique et facile à réaliser."</p>
